[gd_scene load_steps=21 format=3 uid="uid://cluhf5gby2umq"]

[ext_resource type="Script" uid="uid://bwlcxg7604y0c" path="res://scenes/enemies/firstEnemy/enemy.gd" id="1_qpkw3"]
[ext_resource type="Script" uid="uid://k08spd0lvwti" path="res://Recources/moving_entity_params.gd" id="2_p0f6a"]
[ext_resource type="Shader" uid="uid://cmd1x28vgunaa" path="res://shaders/flash.gdshader" id="2_p4q80"]
[ext_resource type="Script" uid="uid://8rms6rae8mtb" path="res://components/damage_detection/health_component.gd" id="3_tt18s"]
[ext_resource type="Texture2D" uid="uid://tomus6473e50" path="res://assests/Enemy/enemybobmove.png" id="4_lu5c6"]
[ext_resource type="Texture2D" uid="uid://clm3q6n17ykdl" path="res://assests/Enemy/bob_main_sprite.png" id="4_nb6gf"]
[ext_resource type="Script" uid="uid://c3aifbheqy0ru" path="res://components/damage_detection/hurtbox.gd" id="7_jt03m"]

[sub_resource type="Resource" id="Resource_b6ihv"]
script = ExtResource("2_p0f6a")
SECONDS_TO_MAX_SPEED = 0.5
SECONDS_TO_STOP_COMPLETELY = 0.5
HANG_TIME = 0.5
FALL_TIME = 0.4
MAX_SPEED = 80.0
WALL_JUMP_HORIZONTAL_POWER = 0.0
MAX_SPEED_JUMP_INCREASE = 0.0
JUMP_HEIGHT = 160.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i60lk"]
shader = ExtResource("2_p4q80")
shader_parameter/is_on = false

[sub_resource type="AtlasTexture" id="AtlasTexture_tihwb"]
atlas = ExtResource("4_nb6gf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb6gf"]
atlas = ExtResource("4_lu5c6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt03m"]
atlas = ExtResource("4_lu5c6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7575"]
atlas = ExtResource("4_lu5c6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qch6t"]
atlas = ExtResource("4_lu5c6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5th1"]
atlas = ExtResource("4_lu5c6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tihwb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihwb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb6gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt03m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7575")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qch6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5th1")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nb6gf"]
radius = 3.5
height = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cad3a"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_apexg"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7575"]
size = Vector2(11, 9.5)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 21
script = ExtResource("1_qpkw3")
params = SubResource("Resource_b6ihv")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_i60lk")
sprite_frames = SubResource("SpriteFrames_tihwb")
animation = &"move"
frame_progress = 0.291705

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("CapsuleShape2D_nb6gf")

[node name="enter_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_area"]
shape = SubResource("CircleShape2D_cad3a")

[node name="exit_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit_area"]
shape = SubResource("CircleShape2D_apexg")

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_tt18s")
idle_healing = 1.0
max_health = 5.0

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 2
collision_mask = 4
script = ExtResource("7_jt03m")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://c3aifbheqy0ru"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_n7575")

[connection signal="body_entered" from="enter_area" to="." method="_on_enter_area_body_entered"]
[connection signal="body_exited" from="exit_area" to="." method="_on_exit_area_body_exited"]
[connection signal="died" from="HealthComponent" to="." method="_on_death"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
